- 1.1.0.15a JWT Decoding (Tools.DecodeJWT) added to log to find out issues when decoding tokens on PROD / PREPROD servers (errors with no message)

--- a/src/main/java/frmMain.form
+++ b/src/main/java/frmMain.form
@@ -346,11 +346,12 @@
                                   </grid>
                                 </constraints>
                                 <properties>
+                                  <dividerLocation value="500"/>
                                   <dividerSize value="8"/>
                                 </properties>
                                 <border type="none"/>
                                 <children>
-                                  <grid id="4b336" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                  <grid id="4b336" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                     <margin top="0" left="0" bottom="0" right="0"/>
                                     <constraints>
                                       <splitpane position="left"/>
@@ -366,14 +367,9 @@
                                           <text value="Update"/>
                                         </properties>
                                       </component>
-                                      <hspacer id="b3cf3">
-                                        <constraints>
-                                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                                        </constraints>
-                                      </hspacer>
                                       <scrollpane id="6040f">
                                         <constraints>
-                                          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                                          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                                         </constraints>
                                         <properties/>
                                         <border type="none"/>
@@ -387,6 +383,25 @@
                                           </component>
                                         </children>
                                       </scrollpane>
+                                      <component id="c4df7" class="javax.swing.JButton" binding="btnTokenTest">
+                                        <constraints>
+                                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                                        </constraints>
+                                        <properties>
+                                          <text value="Test from File"/>
+                                          <toolTipText value="Read a token from given file and decode it"/>
+                                        </properties>
+                                      </component>
+                                      <component id="c7439" class="javax.swing.JTextField" binding="txTestTokenFile">
+                                        <constraints>
+                                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                                            <preferred-size width="150" height="-1"/>
+                                          </grid>
+                                        </constraints>
+                                        <properties>
+                                          <toolTipText value="File with a text representing token for decoding"/>
+                                        </properties>
+                                      </component>
                                     </children>
                                   </grid>
                                   <grid id="9025d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -3354,7 +3369,7 @@
                       <editable value="false"/>
                       <font size="12"/>
                       <horizontalAlignment value="2"/>
-                      <text value="1.1.0.13"/>
+                      <text value="1.1.0.15a"/>
                     </properties>
                   </component>
                   <component id="f55ba" class="javax.swing.JLabel">
@@ -3377,7 +3392,7 @@
                     <properties>
                       <editable value="false"/>
                       <font size="12"/>
-                      <text value="2021-02-16"/>
+                      <text value="2021-02-21"/>
                     </properties>
                   </component>
                   <hspacer id="47b19">
