--- a/src/main/java/frmMain.form
+++ b/src/main/java/frmMain.form
@@ -133,7 +133,7 @@
                           </component>
                         </children>
                       </grid>
-                      <grid id="5f302" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                      <grid id="5f302" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                         <margin top="5" left="5" bottom="5" right="5"/>
                         <constraints>
                           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -141,14 +141,14 @@
                           </grid>
                         </constraints>
                         <properties/>
-                        <border type="bevel-raised" title="   Resend Verification Email" title-justification="2">
+                        <border type="bevel-raised" title="   Resend Verification Email / Delete User" title-justification="2">
                           <font size="12" style="1"/>
                           <title-color color="-14672672"/>
                         </border>
                         <children>
                           <component id="faa05" class="javax.swing.JComboBox" binding="cbUserMailUsers">
                             <constraints>
-                              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                              <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                 <preferred-size width="143" height="25"/>
                               </grid>
                             </constraints>
@@ -156,25 +156,47 @@
                           </component>
                           <component id="79217" class="javax.swing.JButton" binding="btnUserMailResendVerifyEmail">
                             <constraints>
-                              <grid row="3" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                              <grid row="1" column="0" row-span="2" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
                               <text value="Resend Verification Email"/>
                             </properties>
                           </component>
-                          <vspacer id="5804b">
+                          <component id="257af" class="javax.swing.JButton" binding="btnUserDeleteUser">
                             <constraints>
-                              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                              <grid row="3" column="0" row-span="2" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
-                          </vspacer>
-                          <component id="90018" class="javax.swing.JLabel">
+                            <properties>
+                              <text value="Delete User"/>
+                            </properties>
+                          </component>
+                          <component id="28fcb" class="javax.swing.JLabel">
                             <constraints>
-                              <grid row="0" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
                               <font size="12" style="1"/>
                               <horizontalAlignment value="4"/>
-                              <text value="User:"/>
+                              <text value="PWD:"/>
+                            </properties>
+                          </component>
+                          <component id="23584" class="javax.swing.JButton" binding="btnUserSetPwd">
+                            <constraints>
+                              <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text value="Set PASSWORD"/>
+                            </properties>
+                          </component>
+                          <component id="463ae" class="javax.swing.JTextField" binding="txUserNewPassword">
+                            <constraints>
+                              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                                <preferred-size width="150" height="-1"/>
+                              </grid>
+                            </constraints>
+                            <properties>
+                              <font size="12"/>
+                              <text value=""/>
                             </properties>
                           </component>
                         </children>
@@ -1513,7 +1535,7 @@
                                         </properties>
                                         <border type="none"/>
                                         <children>
-                                          <grid id="8944c" layout-manager="GridLayoutManager" row-count="3" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                          <grid id="8944c" layout-manager="GridLayoutManager" row-count="3" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                             <margin top="3" left="3" bottom="3" right="3"/>
                                             <constraints>
                                               <splitpane position="right"/>
@@ -1535,7 +1557,7 @@
                                               </component>
                                               <scrollpane id="f6222">
                                                 <constraints>
-                                                  <grid row="0" column="0" row-span="1" col-span="8" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                                                  <grid row="0" column="0" row-span="1" col-span="9" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                                                 </constraints>
                                                 <properties/>
                                                 <border type="none"/>
@@ -1548,7 +1570,7 @@
                                               </scrollpane>
                                               <component id="a2c03" class="javax.swing.JButton" binding="btnLabAddUser">
                                                 <constraints>
-                                                  <grid row="1" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                                                  <grid row="1" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                                                 </constraints>
                                                 <properties>
                                                   <margin top="0" left="0" bottom="0" right="0"/>
@@ -1577,7 +1599,9 @@
                                                 <constraints>
                                                   <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                                                 </constraints>
-                                                <properties/>
+                                                <properties>
+                                                  <enabled value="false"/>
+                                                </properties>
                                               </component>
                                               <component id="d43b8" class="javax.swing.JComboBox" binding="cbLabNewRole">
                                                 <constraints>
@@ -1596,7 +1620,7 @@
                                               </component>
                                               <component id="4befe" class="javax.swing.JComboBox" binding="cbLabNewUser">
                                                 <constraints>
-                                                  <grid row="2" column="1" row-span="1" col-span="7" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                                                  <grid row="2" column="1" row-span="1" col-span="8" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                                                 </constraints>
                                                 <properties>
                                                   <font name="Courier New" size="12"/>
@@ -1609,6 +1633,16 @@
                                                 <properties>
                                                   <margin top="0" left="0" bottom="0" right="0"/>
                                                   <text value="Modify User"/>
+                                                </properties>
+                                              </component>
+                                              <component id="cf5d6" class="javax.swing.JButton" binding="btnLabAddUserOld">
+                                                <constraints>
+                                                  <grid row="1" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                                                </constraints>
+                                                <properties>
+                                                  <enabled value="false"/>
+                                                  <margin top="0" left="0" bottom="0" right="0"/>
+                                                  <text value="Add User Old"/>
                                                 </properties>
                                               </component>
                                             </children>
@@ -3378,7 +3412,7 @@
                       <editable value="false"/>
                       <font size="12"/>
                       <horizontalAlignment value="2"/>
-                      <text value="1.1.0.16"/>
+                      <text value="1.1.0.17"/>
                     </properties>
                   </component>
                   <component id="f55ba" class="javax.swing.JLabel">
