--- a/src/main/java/frmMain.form
+++ b/src/main/java/frmMain.form
@@ -603,7 +603,7 @@
                   </grid>
                 </constraints>
                 <properties>
-                  <dividerLocation value="450"/>
+                  <dividerLocation value="440"/>
                   <dividerSize value="6"/>
                   <orientation value="0"/>
                 </properties>
@@ -1699,7 +1699,7 @@
                             <properties/>
                             <border type="none"/>
                             <children>
-                              <grid id="5213e" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                              <grid id="5213e" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                 <margin top="5" left="5" bottom="5" right="5"/>
                                 <constraints>
                                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -1723,7 +1723,7 @@
                                   </hspacer>
                                   <component id="d6dd9" class="javax.swing.JLabel" binding="lbSysTime">
                                     <constraints>
-                                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                     </constraints>
                                     <properties>
                                       <text value="Label"/>
@@ -1737,19 +1737,6 @@
                                       <text value="Connect to rack ID:"/>
                                     </properties>
                                   </component>
-                                  <scrollpane id="fbf16">
-                                    <constraints>
-                                      <grid row="3" column="0" row-span="1" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                                    </constraints>
-                                    <properties/>
-                                    <border type="none"/>
-                                    <children>
-                                      <component id="d1c39" class="javax.swing.JTable" binding="tblFrontendRacks">
-                                        <constraints/>
-                                        <properties/>
-                                      </component>
-                                    </children>
-                                  </scrollpane>
                                   <component id="59ec9" class="javax.swing.JLabel">
                                     <constraints>
                                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -1795,6 +1782,31 @@
                                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                                     </constraints>
                                     <properties/>
+                                  </component>
+                                  <vspacer id="181c">
+                                    <constraints>
+                                      <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                  </vspacer>
+                                  <component id="cf349" class="javax.swing.JLabel">
+                                    <constraints>
+                                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <font size="12" style="1"/>
+                                      <text value="System message:"/>
+                                    </properties>
+                                  </component>
+                                  <component id="1a6da" class="javax.swing.JTextField" binding="txFeSimSysMsg">
+                                    <constraints>
+                                      <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                                        <preferred-size width="244" height="26"/>
+                                      </grid>
+                                    </constraints>
+                                    <properties>
+                                      <font size="12"/>
+                                      <text value=""/>
+                                    </properties>
                                   </component>
                                 </children>
                               </grid>
@@ -3811,7 +3823,7 @@
                       <editable value="false"/>
                       <font size="12"/>
                       <horizontalAlignment value="2"/>
-                      <text value="1.2.0.0"/>
+                      <text value="1.2.0.1"/>
                     </properties>
                   </component>
                   <component id="f55ba" class="javax.swing.JLabel">
