--- a/src/main/java/frmMain.form
+++ b/src/main/java/frmMain.form
@@ -582,7 +582,7 @@
                       </splitpane>
                     </children>
                   </grid>
-                  <grid id="cbccc" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="cbccc" layout-manager="GridLayoutManager" row-count="2" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <tabbedpane title="User Profile"/>
@@ -600,12 +600,12 @@
                       </component>
                       <hspacer id="4cfd3">
                         <constraints>
-                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                       </hspacer>
                       <scrollpane id="b3327">
                         <constraints>
-                          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                          <grid row="1" column="0" row-span="1" col-span="7" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties/>
                         <border type="none"/>
@@ -619,6 +619,60 @@
                           </component>
                         </children>
                       </scrollpane>
+                      <component id="a7fcc" class="javax.swing.JLabel">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false">
+                            <preferred-size width="115" height="16"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <font size="12" style="1"/>
+                          <horizontalAlignment value="4"/>
+                          <text value="New First  Name:"/>
+                        </properties>
+                      </component>
+                      <component id="5f2a1" class="javax.swing.JTextField" binding="txUserProfileNewFirstName">
+                        <constraints>
+                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                            <preferred-size width="244" height="26"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <font size="12"/>
+                          <text value=""/>
+                        </properties>
+                      </component>
+                      <component id="2547b" class="javax.swing.JLabel">
+                        <constraints>
+                          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false">
+                            <preferred-size width="115" height="16"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <font size="12" style="1"/>
+                          <horizontalAlignment value="4"/>
+                          <text value="New Last  Name:"/>
+                        </properties>
+                      </component>
+                      <component id="6b2d1" class="javax.swing.JTextField" binding="txUserProfileNewLastName">
+                        <constraints>
+                          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                            <preferred-size width="244" height="26"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <font size="12"/>
+                          <text value=""/>
+                        </properties>
+                      </component>
+                      <component id="4cfc5" class="javax.swing.JButton" binding="btnUserUpdateProfile">
+                        <constraints>
+                          <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Update Profile"/>
+                        </properties>
+                      </component>
                     </children>
                   </grid>
                 </children>
@@ -4239,7 +4293,7 @@
                       <editable value="false"/>
                       <font size="12"/>
                       <horizontalAlignment value="2"/>
-                      <text value="1.4.1.2"/>
+                      <text value="1.4.2.0"/>
                     </properties>
                   </component>
                   <component id="f55ba" class="javax.swing.JLabel">
